testsuite/gsksl/errors/initialize-local-const.frag
void
main ()
{
  const int x;
}
